# bundlebase

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
.context/: README.md  ai-rules.md  anti-patterns.md  boundaries.md  code-review.md  debt.md  dependencies.md  development.md  errors.md  glossary.md  indexing.md  overview.md  performance.md  progress.md  python-api.md  sync-api.md  workflows.md
.context/decisions/: 001-rust-core.md  002-datafusion-arrow.md  003-streaming-only.md  004-three-tier-architecture.md  005-mutable-operations.md  006-lazy-evaluation.md  007-no-unwrap.md  008-no-mod-rs.md  README.md
.context/prompts/: README.md  add-operation.md  add-python-binding.md  fix-bug.md  new-feature.md  performance-review.md
claude/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-PYTHON-API.md  03-PYTHON-BINDINGS.md  04-VERSIONING.md  05-TESTING.md  07-ROW-INDEXING.md  08-PROGRESS-TRACKING.md  08-SYNC-API.md  09-LOGGING.md  10-VIEWS.md
docs/: .pages  index.md
rust/bundlebase/: Cargo.toml
rust/bundlebase-cli/: Cargo.toml
rust/bundlebase-cli/src/: auth.rs  main.rs  repl.rs  service.rs  state.rs
rust/bundlebase-cli/src/repl/: commands.rs  completion.rs  display.rs  progress_impl.rs
rust/bundlebase/src/: bundle.rs  bundle_config.rs  catalog.rs  data.rs  data_storage.rs  index.rs  io.rs  lib.rs  metrics.rs  observability.rs  python.rs  test_utils.rs
rust/bundlebase/src/bundle/: builder.rs  command.rs  commit.rs  facade.rs  init.rs  operation.rs  sql.rs
rust/bundlebase/src/bundle/command/: commands.pest  parser.rs  parser_pest.rs
rust/bundlebase/src/bundle/operation/: attach_block.rs  attach_view.rs  create_view.rs  define_index.rs  define_pack.rs  define_source.rs  drop_index.rs  drop_view.rs  filter.rs  index_blocks.rs  join.rs  query.rs  rebuild_index.rs  rename_view.rs  select.rs  set_config.rs
rust/bundlebase/src/catalog/: block_schema_provider.rs  pack_schema_provider.rs  pack_union_table.rs
rust/bundlebase/src/data/: data_block.rs  data_pack.rs  ftp_source_function.rs  object_id.rs  plugin.rs  reader_factory.rs  rowid_offset_data_source.rs  rowid_provider.rs  rowid_stream.rs  scp_source_function.rs  source.rs  source_function.rs
rust/bundlebase/src/data/plugin/: csv_reader.rs  file_reader.rs  function_reader.rs  json_reader.rs  mock.rs  parquet_reader.rs
rust/bundlebase/src/data_reader/: data_block.rs  rowid_offset_data_source.rs  rowid_provider.rs
rust/bundlebase/src/index/: column_index.rs  filter_analyzer.rs  index_definition.rs  index_selector.rs  indexed_blocks.rs  logging_exporter.rs  metrics.rs  rowid_cache.rs  rowid_index.rs
rust/bundlebase/src/io/: ftp_client.rs  io_dir.rs  io_file.rs  io_ftp.rs  io_registry.rs  io_sftp.rs  io_tar.rs  io_traits.rs  object_store_dir.rs  object_store_file.rs  sftp_client.rs  tar_object_store.rs  util.rs
rust/bundlebase/src/metrics/: logging.rs  progress.rs
rust/bundlebase/src/observability/: logging.rs  progress.rs
rust/bundlebase/src/python/: builder.rs  bundle.rs  commit.rs  data_generator.rs  function_impl.rs  operation.rs  progress.rs  record_batch_stream.rs  session_context.rs
rust/bundlebase/src/schema_provider/: block_schema_provider.rs  pack_schema_provider.rs  pack_union_table.rs
rust/bundlebase/tests/: basic_e2e.rs  blocks_e2e.rs  building_e2e.rs  bundle_schema_e2e.rs  filters_selects_e2e.rs  functions_e2e.rs  index_e2e.rs  join_e2e.rs  operations_e2e.rs  schema_e2e.rs  select_e2e.rs  source_e2e.rs  tar_e2e.rs  views_e2e.rs
rust/bundlebase/tests/common/: mod.rs
scripts/: README.md  build_docs.sh  maturin-build.sh  maturin-dev.sh
test_data/: customers-101-150.csv  sales-regions-2.csv  sales-regions.csv
(+56 files in other folders)
