[workspace]
members = [
    "rust/bundlebase",
    "rust/bundlebase-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
datafusion = { version = "51", features = ["avro"] }
arrow = { version = "57", features = ["ffi", "pyarrow"] }
arrow-flight = "57"
arrow-schema = { version = "57", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rstest = "0.26"

# Build profiles for faster iteration during development
[profile.dev]
opt-level = 0
lto = false
codegen-units = 256

[profile.test]
opt-level = 0
lto = false
codegen-units = 256
