[package]
name = "bundlebase"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
tokio = { version = "1", features = ["fs"] }
pyo3 = { version = "0.26", features = ["experimental-async"] }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = "1.0"
url = { version = "2.5", features = ["serde"] }
object_store = { version = "0.12", features = ["aws"] }
async-trait = "0.1"
parking_lot = "0.12"
futures = "0.3"
lazy_static = "1.4"
bytes = "1.11"
log = "0.4"
pyo3-log = "0.13"
sha2 = "0.10"
hex = "0.4"
parquet = "57.0.0"
rand = "0.9.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4"] }
regex = "1.12.2"

[dev-dependencies]
tempfile = "3.23"
rstest = { workspace = true }
env_logger = "0.11"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
